# Boot-Camp-etapa-inicial-Controle-de-estoque-para-microempreendedores-

./: .gitignore  README.md  pyproject.toml  render.yaml  web_app.py
.github/workflows/: ci.yml
StockGuad/: .gitignore
StockGuad/.github/workflows/: ci.yml
StockGuad/src/stockguard/: storage.py
StockGuad/tests/: pytest.py  test_inventory.py
StockGuard/: .gitignore  CHANGELOG.md  pyproject.toml
StockGuard/.github/workflows/: ci.yml
StockGuard/src/stockguard/: __init__.py  cli.py  inventory.py  storage.py
StockGuard/tests/: __init__.py  test_inventory.py
src/stockguard/: cli.py  inventory.py  storage.py  suppliers.py
tests/: test_inventory.py  test_suppliers_integration.py
