[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stockguard"
version = "1.1.0"
description = "Controle de estoque para microempreendedores — com integração ViaCEP"
authors = [{ name = "Renzo Machado Alves Vaz", email = "eusourenzo@gmail.com" }]
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
]

[project.scripts]
stockguard = "stockguard.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: testes que fazem requisições reais à API ViaCEP (requer internet)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]